# tutor-for-everyone

./: .Dockerfile  .gitignore  docker-compose.yml  pyproject.toml
src/: manage.py
src/tutor_for_everyone/: asgi.py  settings.py  urls.py  wsgi.py
